<resources>

    <string name="app_name">nectar</string>
    <string name="carrot_icon">carrot_icon\n</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="account">Account</string>
    <string name="find_products">Find Products</string>
    <string name="search_store">Search Store</string>
    <string name="exclusive_offer">Exclusive Offer</string>
    <string name="see_all">See all</string>
    <string name="best_selling">Best Selling</string>
    <string name="location">Da Nang - Viet Nam</string>
    <string name="groceries">Groceries</string>
    <string name="product_name">Naturel Red Apple</string>
    <string name="price_unit">1kg, Price</string>
    <string name="quantity">12</string>
    <string name="price">$4.99</string>
    <string name="product_detail_title">Product Detail</string>
    <string name="product_detail">Apples are nutritious. Apples may be good for weight loss. apples may be good for your heart. As part of a healtful and varied diet.</string>
    <string name="nutritions">Nutritions</string>
    <string name="volume">100gr</string>
    <string name="review">Review</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="back_button">Back Button</string>
    <string name="loging">Loging</string>
    <string name="login_label">Enter youre emails and password</string>
    <string name="btn_login">Log In</string>
    <string name="enter_email">enter email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="singup_label">Enter your credentials to continue</string>
    <string name="lb_username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="lb_email">Email</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="link_singup">Singup</string>
    <string name="enter_password">enter password</string>

    <string name="facebook_app_id">24702276002706256</string>
    <string name="fb_login_protocol_scheme">fb24702276002706256</string>
    <string name="facebook_client_token">676b1d9ddfd2900a8d2e9556e4ae61a2</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="lb_filters">Filters</string>
    <string name="ds_back">Back</string>
    <string name="noodles_pasta"><![CDATA[Noodles & Pasta]]></string>
    <string name="chips_crisps"><![CDATA[Chips & Crisps]]></string>
    <string name="fast_food">Fast Food</string>
    <string name="brand">Brand</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="cocola">Cocola</string>
    <string name="back">Back</string>
    <string name="categories">Categories</string>
    <string name="eggs">Eggs</string>

</resources>