<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:id="@+id/img_signIn"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:layout_height="47.8dp"
            android:src="@drawable/ic_carrot"
            android:contentDescription="@string/carrot_icon" />



        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/loging"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:gravity="start" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login_label"
                android:background="@null"
                android:textSize="16sp"
                android:textColor="#7C7C7C" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/lb_email"
                android:textColor="#7C7C7C"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/enter_email"
                android:background="@null"
                android:textSize="18sp"
                android:textColor="@android:color/black" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="20dp"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="Password"
                android:textColor="#7C7C7C"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/enter_password"
                android:background="@null"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:ems="10"
                android:inputType="textPassword"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="20dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="12sp"
                android:gravity="end"
                android:textColor="#888888" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_login"
                android:text="@string/btn_login"
                android:backgroundTint="@null"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="14sp"
                    android:textColor="#888888" />

                <TextView
                    android:id="@+id/link_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_singup"
                    android:textColor="#53B175"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
