<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:id="@+id/img_sigUp"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="47.8dp"
            android:src="@drawable/ic_carrot"
            android:contentDescription="@string/carrot_icon" />



        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:gravity="start" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/singup_label"
                android:textSize="16sp"
                android:textColor="#7C7C7C" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/lb_username"
                android:textColor="#7C7C7C"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textSize="18sp"
                android:textColor="@android:color/black" />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/lb_email"
                android:textColor="#7C7C7C"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textSize="18sp"
                android:textColor="@android:color/black" />





            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="Password"
                android:textColor="#7C7C7C"
                android:textSize="16sp"
                android:layout_marginTop="20dp"/>


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:ems="10"
                android:inputType="textPassword"/>



            <TextView
                android:id="@+id/termsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="20dp"/>



            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button_login"
                android:text="Sign Up" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="14sp"
                    android:textColor="#888888" />

                <TextView
                    android:id="@+id/link_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="#53B175"
                    android:textSize="14sp" />
            </LinearLayout>



        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
