<?xml version="1.0" encoding="utf-8" ?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:text="@string/location"
        app:drawableTopCompat="@drawable/ic_carrot" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/search_store"
        android:inputType="text"
        android:textColorHint="#7C7C7C"
        android:drawableStart="@drawable/ic_find"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/bg_search"/>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/bannerViewPager"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:clipToPadding="false"
        android:clipChildren="false" />

    <!--  Exclusive Offer  -->
    <LinearLayout
        android:id="@+id/llExclusive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exclusive_offer"
            android:textSize="24sp"
            android:textColor="#181725"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textSize="16sp"
            android:textColor="#53B175" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExclusive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        android:background="@color/white" />



    <LinearLayout
        android:id="@+id/llSelling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/best_selling"
            android:textSize="24sp"
            android:textColor="#181725"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seeAllSelling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textSize="16sp"
            android:textColor="#53B175" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSelling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        android:background="@color/white" />

</LinearLayout>
</ScrollView>
